# shopee-cli

./: .gitignore  API_DOCS.md  README.md  pyproject.toml
scripts/: capture_traffic.py  explore_api.py  inspect_captcha.py  test_autosolver.py
src/shopee_cli/: auth.py  captcha.py  cli.py  client.py  config.py
src/shopee_cli/api/: orders.py  product.py  search.py
